fixed layout issue when map is open on mobile

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -7,6 +7,12 @@
   overflow: auto !important;
 
   &:has(.map-active) {
+    @include for-mobile-layout {
+      radio-filter {
+        display: none;
+      }
+    }
+
     @include for-normal-layout {
       padding: em(20px) 1.25em;
     }
@@ -76,6 +82,9 @@
     display: grid;
     gap: 1em;
     grid-template-columns: 1fr;
+    @include for-mobile-layout {
+      margin-block-start: calc($header-height + 3em);
+    }
     @include for-normal-layout {
       grid-template-columns: 1.1fr 1fr;
       grid-template-rows: 1fr;
@@ -125,13 +134,26 @@
         .stay-preview-container {
           width: 12.875em;
           gap: 1em;
-
+          @include for-mobile-layout {
+            width: 100%;
+          }
           .img-container {
             width: 12.875em;
             height: 12.25em;
+            @include for-mobile-layout {
+              width: 100%;
+              height: 16em;
+            }
           }
           .txt-container {
             grid-template-columns: 10em 1fr;
+          }
+        }
+
+        @include for-mobile-layout {
+          place-items: center;
+          & a {
+            width: 100%;
           }
         }
       }
